k8s/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - name: http
      port: 8096
      targetPort: 8096
      protocol: TCP
